--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -20,6 +20,25 @@
         <!-- End of Project controll buttons -->
     </div>
 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel list-group">
+                <div class="list-group-item active">
+                    <i class="fa fa-tasks"></i>
+                    <span>Tasks</span>
+                </div>
+                <div class="panel-heading list-group-item">
+                    <div class="btn-group">
+                        <div class="btn btn-default active">Task view: </div>
+                        <div class="btn btn-default">Table</div>
+                        <div class="btn btn-default">List</div>
+                        <div class="btn btn-default">Agile board</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- BEGIN OF CHAT PANEL -->
     <div class="chat-panel list-group">
         <div class="list-group-item active">
