--- a/src/ZectranetBundle/Resources/views/user.html.twig
+++ b/src/ZectranetBundle/Resources/views/user.html.twig
@@ -39,13 +39,13 @@
             </div>
             {% if officesCount > 3 %}
                 <a data-toggle="collapse" href="#private_office_collapse" aria-expanded="false"
-                   class="collapsed list-group-item text-center btn btn-default">
+                   class="collapsed list-group-item text-center btn btn-default btn-primary">
                     Show all
                 </a>
             {% endif %}
 
             <a href="#" class="list-group-item text-center btn btn-default" data-toggle="modal" data-target="#add_private_office">
-                <span>Add New Private Office</span>
+                <span>Add New Office</span>
             </a>
         </div>
         <!-- End of Private Offices -->
@@ -86,7 +86,7 @@
             {% endif %}
 
             <a href="#" class="list-group-item text-center btn btn-default" data-toggle="modal" data-target="#add_private_project">
-                <span>Add New Private Project</span>
+                <span>Add New Project</span>
             </a>
         </div>
         <!-- End of Private Projects -->
