--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -144,11 +144,17 @@
                                             <div class="col-xs-12">
                                                 <div class="col-xs-6">
                                                     <label class="text-muted" for="input1" style="font-weight: normal">Start office</label>
-                                                    <input id="input1" class="form-control" type="time" name="startOffice">
+                                                    <input id="input1" class="form-control timepicker" type="time" name="startOffice"
+                                                           {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].startTime is empty ? "" : app.user.wde[0].startTime| date('H:i') }}'
+                                                            {% endif %}>
                                                 </div>
                                                 <div class="col-xs-6">
                                                     <label class="text-muted" for="input2" style="font-weight: normal">Start lunch</label>
-                                                    <input id="input2" class="form-control" type="time" name="startLunch">
+                                                    <input id="input2" class="form-control" type="time" name="startLunch"
+                                                            {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].beginLunch is empty ? "" : app.user.wde[0].beginLunch| date('H:i') }}'
+                                                            {% endif %}>
                                                 </div>
                                             </div>
                                         </div>
@@ -158,11 +164,18 @@
                                             <div class="col-xs-12">
                                                 <div class="col-xs-6">
                                                     <label class="text-muted" for="input3" style="font-weight: normal">End lunch</label>
-                                                    <input id="input3" class="form-control" type="time" name="endLunch">
+                                                    <input id="input3" class="form-control" type="time" name="endLunch"
+                                                    <input id="input2" class="form-control" type="time" name="startLunch"
+                                                            {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].endLunch is empty ? "" : app.user.wde[0].endLunch| date('H:i') }}'
+                                                            {% endif %}>
                                                 </div>
                                                 <div class="col-xs-6">
                                                     <label class="text-muted" for="input4" style="font-weight: normal">End office</label>
-                                                    <input id="input4" class="form-control" type="time" name="endOffice">
+                                                    <input id="input4" class="form-control" type="time" name="endOffice"
+                                                            {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].endTime is empty ? "" : app.user.wde[0].endTime| date('H:i') }}'
+                                                            {% endif %}>
                                                 </div>
                                             </div>
                                         </div>
@@ -172,11 +185,17 @@
                                             <div class="col-sm-12">
                                                 <div class="col-sm-3">
                                                     <label class="text-muted" for="input5" style="font-weight: normal">Hours</label>
-                                                    <input id="input5" class="form-control text-center" type="text" name="hours" pattern="[0-9]{1}">
+                                                    <input id="input5" class="form-control text-center" type="text" name="hours" pattern="[0-9]{1}"
+                                                            {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].hours }}'
+                                                            {% endif %}>
                                                 </div>
                                                 <div class="col-sm-9">
                                                     <label class="text-muted" for="input6" style="font-weight: normal">Main task</label>
-                                                    <input id="input6" class="form-control" type="text" name="mainTask">
+                                                    <input id="input6" class="form-control" type="text" name="mainTask"
+                                                            {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].mainTask }}'
+                                                            {% endif %}>
                                                 </div>
                                             </div>
                                         </div>
