--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -19,7 +19,8 @@
 		<link href="{{ asset('bundles/zectranet/css/bootstrap_ench_dropdowns.css') }}" rel="stylesheet" type="text/css">
 		<link href="{{ asset('bundles/zectranet/css/style.css') }}" rel="stylesheet" type="text/css">
 		<link href="{{ asset('bundles/zectranet/css/style_upload.css') }}" rel="stylesheet" type="text/css">
-	{% endblock %}
+        <link href="{{ asset('bundles/zectranet/css/clock.css') }}" rel="stylesheet" type="text/css">
+    {% endblock %}
 
 	{% block head %}
 		<base href="{{ app.request.getBaseUrl ~ app.request.getPathInfo }}">
@@ -98,87 +99,123 @@
 
 					</li>
 
-					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-							<i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
-						</a>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <div class="clock hidden-xs">
+                                <ul>
+                                    <li id="hours"> </li>
+                                    <li class="point">:</li>
+                                    <li id="min"> </li>
+                                    <li class="point">:</li>
+                                    <li id="sec" style="margin: 0;"> </li>
+                                </ul>
+                            </div>
+                            <i class="fa fa-tasks fa-fw visible-xs-inline-block"></i>
+                            <i class="fa fa-caret-down" style="margin-left: 5px;"></i>
+                        </a>
 
-						<ul class="dropdown-menu dropdown-tasks">
-							<li>
-								<a href="#">
-									<div>
-										<p>
-											<strong>Task 1</strong>
-											<span class="pull-right text-muted">40% Complete</span>
-										</p>
-										<div class="progress progress-striped active">
-											<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-												<span class="sr-only">40% Complete (success)</span>
-											</div>
-										</div>
-									</div>
-								</a>
-							</li>
-							<li class="divider"></li>
-							<li>
-								<a href="#">
-									<div>
-										<p>
-											<strong>Task 2</strong>
-											<span class="pull-right text-muted">20% Complete</span>
-										</p>
-										<div class="progress progress-striped active">
-											<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-												<span class="sr-only">20% Complete</span>
-											</div>
-										</div>
-									</div>
-								</a>
-							</li>
-							<li class="divider"></li>
-							<li>
-								<a href="#">
-									<div>
-										<p>
-											<strong>Task 3</strong>
-											<span class="pull-right text-muted">60% Complete</span>
-										</p>
-										<div class="progress progress-striped active">
-											<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-												<span class="sr-only">60% Complete (warning)</span>
-											</div>
-										</div>
-									</div>
-								</a>
-							</li>
-							<li class="divider"></li>
-							<li>
-								<a href="#">
-									<div>
-										<p>
-											<strong>Task 4</strong>
-											<span class="pull-right text-muted">80% Complete</span>
-										</p>
-										<div class="progress progress-striped active">
-											<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-												<span class="sr-only">80% Complete (danger)</span>
-											</div>
-										</div>
-									</div>
-								</a>
-							</li>
-							<li class="divider"></li>
-							<li>
-								<a class="text-center" href="#">
-									<strong>See All Tasks</strong>
-									<i class="fa fa-angle-right"></i>
-								</a>
-							</li>
-						</ul>
+                        <ul class="dropdown-menu dropdown-tasks noclose">
+                            <li>
+                                <a href="#">
+                                    <div>
+                                        <p>
+                                            <strong>Task 1</strong>
+                                            <span class="pull-right text-muted">40% Complete</span>
+                                        </p>
+                                        <div class="progress progress-striped active">
+                                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                                                <span class="sr-only">40% Complete (success)</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
 
-					</li>
+                            <li class="divider"></li>
 
-					<li class="dropdown">
+                            <li class="text-center"><b>WDE</b></li>
+
+                            <li class="divider"></li>
+
+                            <li>
+                                <form method="post" action="{{ path('zectranet_wde') }}">
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-xs-12">
+                                                <div class="col-xs-6">
+                                                    <label class="text-muted" for="input1" style="font-weight: normal">Start office</label>
+                                                    <input id="input1" class="form-control timepicker" type="time" name="startOffice"
+                                                           {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].startTime is empty ? "" : app.user.wde[0].startTime| date('H:i') }}'
+                                                            {% endif %}>
+                                                </div>
+                                                <div class="col-xs-6">
+                                                    <label class="text-muted" for="input2" style="font-weight: normal">Start lunch</label>
+                                                    <input id="input2" class="form-control" type="time" name="startLunch"
+                                                            {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].beginLunch is empty ? "" : app.user.wde[0].beginLunch| date('H:i') }}'
+                                                            {% endif %}>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-xs-12">
+                                                <div class="col-xs-6">
+                                                    <label class="text-muted" for="input3" style="font-weight: normal">End lunch</label>
+                                                    <input id="input3" class="form-control" type="time" name="endLunch"
+                                                    <input id="input2" class="form-control" type="time" name="startLunch"
+                                                            {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].endLunch is empty ? "" : app.user.wde[0].endLunch| date('H:i') }}'
+                                                            {% endif %}>
+                                                </div>
+                                                <div class="col-xs-6">
+                                                    <label class="text-muted" for="input4" style="font-weight: normal">End office</label>
+                                                    <input id="input4" class="form-control" type="time" name="endOffice"
+                                                            {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].endTime is empty ? "" : app.user.wde[0].endTime| date('H:i') }}'
+                                                            {% endif %}>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-sm-12">
+                                                <div class="col-sm-3">
+                                                    <label class="text-muted" for="input5" style="font-weight: normal">Hours</label>
+                                                    <input id="input5" class="form-control text-center" type="text" name="hours" pattern="[0-9]{1}"
+                                                            {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].hours }}'
+                                                            {% endif %}>
+                                                </div>
+                                                <div class="col-sm-9">
+                                                    <label class="text-muted" for="input6" style="font-weight: normal">Main task</label>
+                                                    <input id="input6" class="form-control" type="text" name="mainTask"
+                                                            {% if (app.user.wde|length > 0) and (app.user.wde[0].date| date('Y-m-d') == "now"| date('Y-m-d')) %}
+                                                                value='{{ app.user.wde[0].mainTask }}'
+                                                            {% endif %}>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-xs-12">
+                                                <div style="padding: 0 15px;">
+                                                    <input type="submit" class="btn btn-primary form-control" value="Save">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </li>
+                        </ul>
+
+                    </li>
+
+                    <li class="dropdown">
 
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 							<i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -409,6 +446,40 @@
 			SearchText = '{{ searchText }}';
 		{% endif %}
 	</script>
+
+    <!-- script for Clock -->
+    <script type="text/javascript">
+
+        // create new object for Date
+        var newDate = new Date();
+
+        // write current date
+        newDate.setDate(newDate.getDate());
+
+        setInterval( function() {
+            // create new object for seconds
+            var seconds = new Date().getSeconds();
+            $("#sec").html(( seconds < 10 ? "0" : "" ) + seconds);
+        },1000);
+
+        setInterval( function() {
+            // create new object for minutes
+            var minutes = new Date().getMinutes();
+            $("#min").html(( minutes < 10 ? "0" : "" ) + minutes);
+        },1000);
+
+        setInterval( function() {
+            // create new object for hours
+            var hours = new Date().getHours();
+            $("#hours").html(( hours < 10 ? "0" : "" ) + hours);
+        }, 1000);
+
+        $('.noclose').bind('click', function (event) {
+            event.stopPropagation();
+        });
+
+    </script>
+
 {% endblock %}
 
 
