--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -100,14 +100,12 @@
 					</li>
 
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="padding: 13px;">
                             <div class="clock hidden-xs">
                                 <ul>
                                     <li id="hours"> </li>
                                     <li class="point">:</li>
-                                    <li id="min"> </li>
-                                    <li class="point">:</li>
-                                    <li id="sec" style="margin: 0;"> </li>
+                                    <li id="min" style="margin: 0;"> </li>
                                 </ul>
                             </div>
                             <i class="fa fa-tasks fa-fw visible-xs-inline-block"></i>
