--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -160,7 +160,19 @@
                         <div id="agile-view" class="tab-pane fade" aria-labelledby="task-view-agile" role="tabpanel">
                             <div class="row">
                                 <div class="col-md-12">
+                                    <div class="col-md-3">
+                                        <div class="page-header text-center">Story</div>
 
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="page-header text-center">Todo</div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="page-header text-center">In-progress</div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="page-header text-center">Done</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
