--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -158,11 +158,11 @@
                         </div>
 
                         <div id="agile-view" class="tab-pane fade" aria-labelledby="task-view-agile" role="tabpanel">
-                            <div class="row">
-                                <div class="col-md-12">
+                            <div class="col-md-12">
+
+                                <div class="row">
                                     <div class="col-md-3">
                                         <div class="page-header text-center">Story</div>
-
                                     </div>
                                     <div class="col-md-3">
                                         <div class="page-header text-center">Todo</div>
@@ -174,6 +174,29 @@
                                         <div class="page-header text-center">Done</div>
                                     </div>
                                 </div>
+
+                                {% for task in project.tasks %}
+                                <div class="row">
+
+                                    <div class="col-md-3">
+                                        {% if task.status.label == 'story' %}
+
+                                    </div>
+
+                                    <div class="col-md-3">
+
+                                    </div>
+
+                                    <div class="col-md-3">
+
+                                    </div>
+
+                                    <div class="col-md-3">
+
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
