--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -196,6 +196,7 @@
                                     </div>
 
                                 </div>
+                                {% endfor %}
 
                             </div>
                         </div>
