--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -180,7 +180,7 @@
 
                                     <div class="col-md-3">
                                         {% if task.status.label == 'story' %}
-
+                                            {% endif %}
                                     </div>
 
                                     <div class="col-md-3">
