--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -9,7 +9,7 @@
 {% block leftSidebar %}
 	<div class="navbar-default sidebar" role="navigation">
 		<div class="sidebar-nav navbar-collapse">
-			<div id="quicksearch-block" ng-controller="SearchController as sctrl">
+			<div id="quicksearch-block">
 				<ul class="nav">
 					<li class="sidebar-search">
 						<div class="input-group custom-search-form dropdown">
