--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="Zectranet">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -398,7 +398,6 @@
 	<script src="{{ asset('bundles/zectranet/js/highlight.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap_ench_dropdowns.js') }}"></script>
 
-	{#<script src="{{ asset('bundles/zectranet/js/custom/angular-core.js') }}" type="text/javascript"></script>#}
 	{#<script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>#}
 	{#<script src="{{ asset('bundles/zectranet/js/custom/CustomJavaScripts.js') }}"></script>#}
 
