--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -247,16 +247,17 @@
         <!-- END OF OFFICE USERS PANEL -->
 
         <!-- BEGIN OF CHAT PANEL -->
-        <div class="chat-panel list-group col-md-8" ng-controller="ChatController">
+        <div class="chat-panel list-group col-md-8" ng-controller="ChatController" ng-init="getPosts(0,10)">
             <div class="list-group-item active">
                 <i class="fa fa-comments fa-fw"></i>
                 Project Chat
             </div>
             <div class="list-group-item panel-body" style="max-height: 300px;">
+                <div ng-repeat="post in posts "> [[ post.message ]]</div>
                 {% if project.postsProject | length == 0 %}
                     <h4 class="text-info text-center vertical-center">Posts will be displayed here</h4>
                 {% endif %}
-                <ul class="chat">
+                <ul class="chat" >
                     {% for post in project.postsProject %}
                         <li class="{% if app.user.id == post.user.id %}right{% else %}left{% endif %} clearfix">
                         <span class="chat-img {% if app.user.id == post.user.id %}pull-right{% else %}pull-left{% endif %}">
@@ -285,16 +286,16 @@
                     {% endfor %}
                 </ul>
             </div>
-            <div class="list-group-item">
+            <div class="list-group-item" >
                 <form class="input-group input-group-lg" action="{{ path('zectranet_project_add_post', { 'project_id': project.id  }) }}" method="post">
                 <span class="input-group-btn">
                     <button class="btn btn-default" type="button" style="height: 65px;">
                         <i class="fa fa-file"></i>
                     </button>
                 </span>
-                    <textarea name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;"></textarea>
+                    <textarea name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-model="message"></textarea>
                 <span class="input-group-btn">
-                    <button class="btn btn-primary" name="subscribe" type="submit" style="height: 65px; font-size:15px;">
+                    <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendMessage(message)">
                         <span>Post</span>
                     </button>
                 </span>
@@ -483,6 +484,11 @@
         function addParentToSubTask(subtask_id) {
             $('#add_subtask_parent').val(subtask_id);
         }
+
+        JSON_URLS.addPost = "{{ path('zectranet_project_add_post', { 'project_id': project.id }) }}";
+        JSON_URLS.getPosts = "{{ path('zectranet_project_get_post', { 'project_id': project.id }) }}";
+
+
     </script>
     <script src="{{ asset('bundles/zectranet/js/custom/chatController.js') }}" type="text/javascript"></script>
 {% endblock %}
