--- a/src/ZectranetBundle/Resources/views/office.html.twig
+++ b/src/ZectranetBundle/Resources/views/office.html.twig
@@ -118,7 +118,7 @@
         <!-- END OF SPRINT LIST -->
     </div>
 
-    <div class="chat-panel list-group">
+    <div class="chat-panel list-group" ng-controller="ChatController" ng-init="getPosts(0,10)">
         <div class="list-group-item active">
             <i class="fa fa-comments fa-fw"></i>
             Office Chat
@@ -127,6 +127,7 @@
             {% if office.postsOffice | length == 0 %}
                 <h4 class="text-info text-center vertical-center">Posts will be displayed here</h4>
             {% endif %}
+            <div ng-repeat="post in posts ">[[ post.message ]]</div>
             <ul class="chat">
                 {% for post in office.postsOffice %}
                     <li class="{% if app.user.id == post.user.id %}right{% else %}left{% endif %} clearfix">
@@ -163,9 +164,9 @@
                         <i class="fa fa-file"></i>
                     </button>
                 </span>
-                <textarea name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;"></textarea>
+                <textarea name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-model="message"></textarea>
                 <span class="input-group-btn">
-                    <button class="btn btn-primary" name="subscribe" type="submit" style="height: 65px; font-size:15px;">
+                    <button class="btn btn-primary" name="subscribe" type="submit" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
                         <span>Post</span>
                     </button>
                 </span>
@@ -203,4 +204,14 @@
         </div>
         <!-- End of Delete Private Office Modal -->
     {% endif %}
+{% endblock %}
+
+{% block javascripts %}
+{{ parent() }}
+    <script>
+        JSON_URLS.addPost = "{{ path('zectranet_office_add_post', { 'office_id': office.id }) }}";
+        JSON_URLS.getPosts = "{{ path('zectranet_office_get_post', { 'office_id': office.id }) }}";
+    </script>
+    <script src="{{ asset('bundles/zectranet/js/custom/chatController.js') }}" type="text/javascript"></script>
+
 {% endblock %}
