--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -253,13 +253,13 @@
                 Project Chat
             </div>
             <div class="list-group-item panel-body" style="max-height: 300px;">
-                <div ng-repeat="post in posts "> [[ post.message ]]</div>
                 {% if project.postsProject | length == 0 %}
                     <h4 class="text-info text-center vertical-center">Posts will be displayed here</h4>
                 {% endif %}
-                <ul class="chat" >
-                    {% for post in project.postsProject %}
-                        <li class="{% if app.user.id == post.user.id %}right{% else %}left{% endif %} clearfix">
+                <div ng-repeat="post in posts ">[[ post.message ]]</div>
+                <ul class="chat"  >
+                     {% for post in project.postsProject %}
+                        <li class="{% if app.user.id == post.user.id  %}right{% else %}left{% endif %} clearfix">
                         <span class="chat-img {% if app.user.id == post.user.id %}pull-right{% else %}pull-left{% endif %}">
                             <img src="{{ asset('') ~ 'documents/' ~ post.user.avatar }}" alt="User Avatar" class="img-circle" style="width: 50px; height: 50px;"/>
                         </span>
@@ -277,13 +277,13 @@
                                     </small>
                                 </div>
                             <pre style="white-space: pre-line;">
-                                <span>
-                                    {{ post.message }}
+                                <span >
+                                   {{ post.message }}
                                 </span>
                             </pre>
                             </div>
                         </li>
-                    {% endfor %}
+                     {% endfor %}
                 </ul>
             </div>
             <div class="list-group-item" >
@@ -295,7 +295,7 @@
                 </span>
                     <textarea name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-model="message"></textarea>
                 <span class="input-group-btn">
-                    <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendMessage(message)">
+                    <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
                         <span>Post</span>
                     </button>
                 </span>
