--- a/src/ZectranetBundle/Resources/views/office.html.twig
+++ b/src/ZectranetBundle/Resources/views/office.html.twig
@@ -166,7 +166,7 @@
                 </span>
                 <textarea name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-model="message"></textarea>
                 <span class="input-group-btn">
-                    <button class="btn btn-primary" name="subscribe" type="submit" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
+                    <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
                         <span>Post</span>
                     </button>
                 </span>
