--- a/src/ZectranetBundle/Resources/views/office.html.twig
+++ b/src/ZectranetBundle/Resources/views/office.html.twig
@@ -158,7 +158,7 @@
             </ul>
         </div>
         <div class="list-group-item">
-            <form class="input-group input-group-lg" action="{{ path('zectranet_office_add_post', { 'office_id': office.id  }) }}" method="post">
+            <form class="input-group input-group-lg">
                 <span class="input-group-btn">
                     <button class="btn btn-default" type="button" style="height: 65px;">
                         <i class="fa fa-file"></i>
